--- a/assets/css/variables/_base.css
+++ b/assets/css/variables/_base.css
@@ -1,5 +1,8 @@
+@import './animation.css';
 @import './colors.css';
-@import './typography.css';
-@import './animations.css';
 @import './grid.css';
-@import './buttons.css';
+@import './notch.css';
+@import './nuxt-loading.css';
+@import './spacings.css';
+@import './typography.css';
+@import './z-index.css';
