--- a/assets/css/variables/colors.css
+++ b/assets/css/variables/colors.css
@@ -1,12 +1,19 @@
 :root {
-  --color-primary: var(--brand-color-primary, #8a1538);
-  --color-cta: var(--brand-color-cta, #009fd4);
-  --color-white: var(--brand-color-white, #fff);
-  --color-gray-lightest: var(--brand-color-gray-lightest, #f1f4f5);
-  --color-gray-lighter: var(--brand-color-gray-lighter, #e6e6e6);
-  --color-gray-light: var(--brand-color-gray-light, #becdd3);
-  --color-gray: var(--brand-color-gray, #a3b8c0);
-  --color-gray-dark: var(--brand-color-gray-dark, #728186);
-  --color-gray-darker: var(--brand-color-gray-darker, #41494c);
-  --color-black: var(--brand-color-black, #000);
+  --color-primary: #010101;
+  --color-black: #000;
+  --color-white: #b3b3b3;
+  --color-gray-darker: #41494c;
+  --color-gray-dark: #728186;
+  --color-gray: #a3b8c0;
+  --color-gray-light: #becdd3;
+  --color-gray-lighter: #e6e6e6;
+  --color-gray-lightest: #f1f4f5;
 }
+
+/*
+@media (--dark-mode) {
+  :root {
+    --color-black: #fff;
+    --color-white: #000;
+  }
+} */
