--- a/assets/css/variables/typography.css
+++ b/assets/css/variables/typography.css
@@ -1,19 +1,16 @@
 :root {
   --font-size-base: 18px;
-  --font-size-h1: 2rem;
-  --font-size-h2: 1.5rem;
-  --font-size-h3: 1.25rem;
-  --font-size-large: 1.1rem;
-  --font-size-small: 0.85rem;
-  --font-weight-bold: 700;
-  --font-weight-normal: 400;
-  --font-weight-light: 300;
+  --font-family-base: 'Ubuntu', sans-serif;
+  --font-family-headings: 'Franklin', var(--font-family-base);
   --line-height-base: 1.5;
-  --line-height-headings: 1.2;
-  --font-family-base: var(--brand-font-family-base, sans-serif);
-  --font-family-headings: var(
-    --brand-font-family-headings,
-    var(--font-family-base)
-  );
-  --text-color: var(--brand-text-color, var(--color-black));
+  --line-height-headings: 1.1;
+  --font-weight-normal: 400;
+  --font-weight-bold: 700;
+  --font-size-xs: 0.8rem;
+  --font-size-sm: 0.9rem;
+  --font-size-m: 1rem;
+  --font-size-l: 1.2rem;
+  --font-size-xl: 1.4rem;
+  --font-size-xxl: 1.8rem;
+  --font-size-xxxl: 2.2rem;
 }
