--- a/assets/css/elements/typography.css
+++ b/assets/css/elements/typography.css
@@ -1,37 +1,92 @@
+@font-face {
+  font-family: 'ABeeZee';
+  src: url('./../../fonts/abeezee.woff2') format('woff2'),
+    url('./../../fonts/abeezee.woff') format('woff');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
 html {
   font-size: var(--font-size-base);
 }
 
 body {
-  font-family: var(--font-family-base);
+  -ms-text-size-adjust: 100%;
+  -webkit-text-size-adjust: 100%;
   line-height: var(--line-height-base);
+  font-weight: var(--font-weight-normal);
   color: var(--text-color);
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  font-family: var(--font-family-base);
 }
 
-strong {
-  font-weight: var(--font-weight-bold);
+p {
+  hanging-punctuation: first;
+  margin: 0 0 var(--spacing-s);
 }
 
 h1,
 h2,
 h3,
 h4,
-h5,
-h6 {
-  font-family: var(--font-family-headings);
-  line-height: var(--line-height-headings);
-  font-weight: var(--font-weight-normal);
+h5 {
+  padding: 0;
+}
+
+h1,
+h2,
+h3 {
+  line-height: var(--line-height-header);
+  font-weight: var(--font-weight-bold);
 }
 
 h1 {
-  font-size: var(--font-size-h1);
-  margin: 0 0 0.5em;
-  padding: 0;
-  font-weight: var(--font-weight-light);
+  margin: 0 0 var(--spacing-xs);
+  font-size: 2.25rem;
 }
 
 h2 {
-  font-size: var(--font-size-h2);
+  margin: 0 0 var(--spacing-xs);
+  font-size: 1.5rem;
+}
+
+h3 {
+  margin: var(--spacing-xs) 0 0;
+  font-size: 1.25rem;
+}
+
+h4 {
+  font-size: 1rem;
+  margin-bottom: 0;
+}
+
+h5 {
+  font-size: 1rem;
+  margin: 0;
+}
+
+.intro {
+  max-width: 60ch;
+  margin-bottom: var(--spacing-xl);
+  font-size: var(--font-size-lg);
+}
+
+blockquote {
+  margin: 0 0 var(--spacing-xxs);
   font-weight: var(--font-weight-bold);
-  margin: 0 0 0.5em;
+  font-size: 1.5em;
+  line-height: var(--line-height-header);
+}
+
+cite {
+  display: block;
+  font-style: normal;
+  color: var(--color-primary);
+
+  &::before {
+    content: '—';
+    margin-left: var(--spacing-s);
+  }
 }
