--- a/assets/css/elements/buttons.css
+++ b/assets/css/elements/buttons.css
@@ -13,50 +13,66 @@ button {
   -webkit-appearance: none;
   text-decoration: none;
   cursor: pointer;
-}
 
-a,
-button {
   &[disabled] {
     cursor: not-allowed;
+    opacity: 0.5;
+  }
+}
+
+.read-more,
+a {
+  color: inherit;
+  text-decoration: none;
+  box-shadow: 0 2px 0 0 var(--color-primary);
+  transition: box-shadow 0.2s ease-out;
+
+  &:hover {
+    box-shadow: 0 3px 0 0 var(--color-primary);
+  }
+}
+
+.read-more {
+  &:hover svg {
+    margin-left: var(--spacing-xxs);
+  }
+
+  & svg {
+    transition: margin 0.2s ease-out;
+    transform: translate3d(2px, 2px, 0);
   }
 }
 
 .btn {
-  @mixin btn;
-}
+  text-align: center;
+  font-weight: var(--font-weight-bold);
+  border-radius: var(--spacing-xxs);
+  display: block;
+  text-decoration: none;
+  padding: var(--spacing-xs) var(--spacing-xs);
+  font-family: var(--font-family-headings);
+  transition: background-color 0.1s ease-in-out;
+  border: 2px solid var(--color-white);
+  background: transparent;
+  max-width: 20em;
+  color: var(--text-color);
 
-.btn-with-icon {
-  @mixin btn-with-icon;
-}
-
-.btn-primary {
-  @mixin btn-primary;
-
-  &:hover,
-  &:focus {
-    @mixin btn-primary-hover;
+  &:hover {
+    background: var(--color-primary);
+    color: var(--color-white);
   }
-}
 
-.btn-cta {
-  @mixin btn-cta;
-
-  &:hover,
-  &:focus {
-    @mixin btn-cta-hover;
+  &:hover {
+    text-decoration: none;
   }
-}
 
-.btn-ghost {
-  @mixin btn-ghost;
+  &:disabled {
+    background: transparent;
+    color: var(--color-white);
+    border: 2px dashed var(--color-white);
 
-  &:hover,
-  &:focus {
-    @mixin btn-ghost-hover;
+    &:hover {
+      background: transparent;
+    }
   }
-}
-
-.btn-with-sub-text {
-  @mixin btn-with-sub-text;
 }
