--- a/assets/css/layout/accessibility.css
+++ b/assets/css/layout/accessibility.css
@@ -1,3 +1,15 @@
+.sr-only {
+  @mixin sr-only;
+}
+
+*:focus {
+  outline: 1px dashed var(--color-white);
+}
+
+.visuallyhidden {
+  display: none;
+}
+
 /* stylelint-disable-next-line media-feature-name-no-unknown */
 @media screen and (prefers-reduced-motion: reduce) {
   * {
@@ -11,8 +23,4 @@
   img {
     filter: invert(100%);
   }
-}
-
-.sr-only {
-  @mixin sr-only;
 }
