--- a/assets/css/media-queries/media-queries.css
+++ b/assets/css/media-queries/media-queries.css
@@ -1,9 +1,8 @@
 @custom-media --dark-mode (prefers-color-scheme: dark);
-@custom-media --viewport-sm (width >= 414px);
-@custom-media --viewport-md (width >= 768px);
-@custom-media --viewport-md-max (width < 768px);
-@custom-media --viewport-lg (width >= 1024px);
-@custom-media --viewport-lg-max (width < 1024px);
+@custom-media --viewport-sm (width >= 640px);
+@custom-media --viewport-md (width >= 1024px);
+@custom-media --viewport-lg (width >= 1240px);
+@custom-media --viewport-xlg (width >= 1440px);
 @custom-media --portrait (orientation: portrait);
 @custom-media --landscape (orientation: landscape);
-@custom-media --show-full-navigation (width >= 768px);
+@custom-media --navigation-position-left (width >= 1024px) and (height >=600px);
