--- a/assets/css/mixins/link-reset.css
+++ b/assets/css/mixins/link-reset.css
@@ -1,9 +1,3 @@
 @define-mixin link-reset {
-  background-image: none;
-  text-decoration: none;
-
-  &:hover,
-  &:focus {
-    text-decoration: none;
-  }
+  box-shadow: none;
 }
