--- a/assets/css/settings/_base.css
+++ b/assets/css/settings/_base.css
@@ -1,8 +1,7 @@
-@import './animation.css';
+@import './menu.css';
 @import './colors.css';
+@import './spacings.css';
 @import './grid.css';
 @import './notch.css';
-@import './nuxt-loading.css';
-@import './spacings.css';
 @import './typography.css';
 @import './z-index.css';
