--- a/assets/css/elements/buttons.css
+++ b/assets/css/elements/buttons.css
@@ -44,6 +44,8 @@ a {
 }
 
 .btn {
+  @mixin link-reset;
+
   text-align: center;
   font-weight: var(--font-weight-bold);
   border-radius: var(--spacing-xxs);
