--- a/assets/css/elements/typography.css
+++ b/assets/css/elements/typography.css
@@ -1,3 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Raleway:wght@500&display=swap');
+
+:root {
+  --ff: 'Raleway';
+  --ff-h: 'Arvo';
+}
+
 @font-face {
   font-family: 'ABeeZee';
   src: url('./../../fonts/abeezee.woff2') format('woff2'),
@@ -19,7 +26,7 @@ body {
   color: var(--text-color);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: var(--font-family-base);
+  font-family: var(--ff), serif;
 }
 
 p {
@@ -33,6 +40,7 @@ h3,
 h4,
 h5 {
   padding: 0;
+  font-family: var(--ff-h), serif;
 }
 
 h1,
