--- a/assets/css/settings/colors.css
+++ b/assets/css/settings/colors.css
@@ -4,8 +4,9 @@
   --color-gray-dark: #666;
   --color-gray: #a3b8c0;
   --color-gray-light: #becdd3;
-  --color-primary: #dcac4c;
+  --color-primary: #891a3b;
   --color-primary-dark: #449729;
-  --text-color: #ddd;
-  --color-secondary: #464545;
+  --text-color: #000;
+  --color-secondary: #ddd;
+  --color-body-background: #ddd;
 }
