--- a/assets/css/elements/typography.css
+++ b/assets/css/elements/typography.css
@@ -1,19 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo&family=Raleway:wght@500&display=swap');
-
-:root {
-  --ff: 'Raleway';
-  --ff-h: 'Arvo';
-}
-
-@font-face {
-  font-family: 'ABeeZee';
-  src: url('./../../fonts/abeezee.woff2') format('woff2'),
-    url('./../../fonts/abeezee.woff') format('woff');
-  font-weight: 400;
-  font-style: normal;
-  font-display: swap;
-}
-
 html {
   font-size: var(--font-size-base);
 }
@@ -26,7 +10,7 @@ body {
   color: var(--text-color);
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  font-family: var(--ff), serif;
+  font-family: var(--font-family-base);
 }
 
 p {
@@ -40,14 +24,14 @@ h3,
 h4,
 h5 {
   padding: 0;
-  font-family: var(--ff-h), serif;
+  font-family: var(--font-family-headings);
 }
 
 h1,
 h2,
 h3 {
-  line-height: var(--line-height-header);
-  font-weight: var(--font-weight-bold);
+  line-height: var(--line-height-headings);
+  font-weight: var(--font-weight-normal);
 }
 
 h1 {
@@ -56,7 +40,7 @@ h1 {
 }
 
 h2 {
-  margin: 0 0 var(--spacing-xs);
+  margin: var(--spacing-xs) 0 var(--spacing-xs);
   font-size: 1.5rem;
 }
 
@@ -83,7 +67,7 @@ h5 {
 
 blockquote {
   margin: 0 0 var(--spacing-xxs);
-  font-weight: var(--font-weight-bold);
+  font-weight: var(--font-weight-bolder);
   font-size: 1.5em;
   line-height: var(--line-height-header);
 }
