--- a/assets/css/elements/buttons.css
+++ b/assets/css/elements/buttons.css
@@ -22,13 +22,15 @@ button {
 
 .read-more,
 a {
-  color: inherit;
-  text-decoration: none;
-  box-shadow: 0 2px 0 0 var(--color-primary);
-  transition: box-shadow 0.2s ease-out;
+  color: currentColor;
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
+  text-decoration-style: solid;
+  text-decoration-color: var(--color-primary);
+  text-underline-offset: 0.2em;
 
   &:hover {
-    box-shadow: 0 3px 0 0 var(--color-primary);
+    text-decoration-thickness: 3px;
   }
 }
 
